--- a/pom.xml
+++ b/pom.xml
@@ -1,52 +1,116 @@
-<dependencies>
-  <!-- Jenkins Core API -->
-  <dependency>
-    <groupId>org.jenkins-ci.main</groupId>
-    <artifactId>jenkins-core</artifactId>
-    <version>${jenkins.version}</version>
-    <scope>provided</scope>
-  </dependency>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-  <!-- Annotation indexing -->
-  <dependency>
-    <groupId>org.jenkins-ci</groupId>
-    <artifactId>annotation-indexer</artifactId>
-    <version>1.12</version>
-    <scope>provided</scope>
-  </dependency>
+  <modelVersion>4.0.0</modelVersion>
 
-  <!-- Microsoft Active Directory LDAP API -->
-  <dependency>
-    <groupId>com4j</groupId>
-    <artifactId>com4j</artifactId>
-    <version>20100207</version>
-  </dependency>
+  <groupId>org.jenkins-ci.plugins</groupId>
+  <artifactId>active-directory</artifactId>
+  <version>2.17-SNAPSHOT</version>
+  <packaging>hpi</packaging>
 
-  <!-- JNA (Java Native Access) -->
-  <dependency>
-    <groupId>net.java.dev.jna</groupId>
-    <artifactId>jna</artifactId>
-    <version>5.5.0</version>
-  </dependency>
+  <name>Jenkins Active Directory Plugin</name>
+  <description>Jenkins plugin for integrating with Microsoft Active Directory</description>
+  <url>https://plugins.jenkins.io/active-directory</url>
 
-  <dependency>
-    <groupId>net.java.dev.jna</groupId>
-    <artifactId>platform</artifactId>
-    <version>5.5.0</version>
-  </dependency>
+  <properties>
+    <java.level>8</java.level>
+    <jenkins.version>2.414.3</jenkins.version>
+    <hpi.plugin.compatibility>modern</hpi.plugin.compatibility>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
 
-  <!-- Testing dependencies -->
-  <dependency>
-    <groupId>org.jenkins-ci.main</groupId>
-    <artifactId>jenkins-test-harness</artifactId>
-    <version>1556.v0d407b_798d89</version>
-    <scope>test</scope>
-  </dependency>
+  <dependencies>
+    <dependency>
+      <groupId>org.jenkins-ci.main</groupId>
+      <artifactId>jenkins-core</artifactId>
+      <version>${jenkins.version}</version>
+      <scope>provided</scope>
+    </dependency>
 
-  <dependency>
-    <groupId>org.mockito</groupId>
-    <artifactId>mockito-inline</artifactId>
-    <version>4.8.1</version>
-    <scope>test</scope>
-  </dependency>
-</dependencies>
+    <dependency>
+      <groupId>org.jenkins-ci</groupId>
+      <artifactId>annotation-indexer</artifactId>
+      <version>1.12</version>
+      <scope>provided</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>com4j</groupId>
+      <artifactId>com4j</artifactId>
+      <version>20100207</version>
+    </dependency>
+
+    <dependency>
+      <groupId>net.java.dev.jna</groupId>
+      <artifactId>jna</artifactId>
+      <version>5.5.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>net.java.dev.jna</groupId>
+      <artifactId>platform</artifactId>
+      <version>5.5.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.jenkins-ci.main</groupId>
+      <artifactId>jenkins-test-harness</artifactId>
+      <version>1556.v0d407b_798d89</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-inline</artifactId>
+      <version>4.8.1</version>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.jenkins-ci.tools</groupId>
+        <artifactId>maven-hpi-plugin</artifactId>
+        <version>3.44</version>
+        <extensions>true</extensions>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.11.0</version>
+        <configuration>
+          <source>${java.level}</source>
+          <target>${java.level}</target>
+        </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.0.0-M9</version>
+      </plugin>
+    </plugins>
+  </build>
+
+  <repositories>
+    <repository>
+      <id>central</id>
+      <url>https://repo.maven.apache.org/maven2</url>
+    </repository>
+    <repository>
+      <id>jenkins-releases</id>
+      <url>https://repo.jenkins-ci.org/releases/</url>
+    </repository>
+  </repositories>
+
+  <pluginRepositories>
+    <pluginRepository>
+      <id>jenkins-ci.org</id>
+      <url>https://repo.jenkins-ci.org/releases/</url>
+    </pluginRepository>
+  </pluginRepositories>
+
+</project>
