--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,8 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" 
+<project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
                              http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  
+
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.jenkins-ci.plugins</groupId>
@@ -28,28 +28,64 @@
     </developer>
   </developers>
 
-  <!-- Use the latest stable Jenkins Plugin Parent -->
+  <!-- ✅ Jenkins Plugin Parent -->
   <parent>
     <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>plugin</artifactId>
     <version>4.64</version>
-    <relativePath />
+    <relativePath /> <!-- Prevent Maven from looking for a local parent -->
   </parent>
 
+  <!-- ✅ Project Properties -->
   <properties>
-    <java.level>8</java.level> <!-- Or use 11 if needed -->
+    <java.level>8</java.level> <!-- Change to 11 if required -->
+    <jenkins.version>2.426.1</jenkins.version>
+    <hpi-plugin.version>3.47</hpi-plugin.version>
   </properties>
 
+  <!-- ✅ Plugin Dependencies -->
   <dependencies>
-    <!-- Example dependency -->
+    <!-- Required for Jenkins plugin -->
     <dependency>
       <groupId>org.jenkins-ci.main</groupId>
       <artifactId>jenkins-core</artifactId>
-      <version>2.426.1</version>
+      <version>${jenkins.version}</version>
       <scope>provided</scope>
     </dependency>
 
-    <!-- Add more dependencies as needed -->
+    <!-- Optional: COM4J (used by some AD plugins) -->
+    <dependency>
+      <groupId>com4j</groupId>
+      <artifactId>com4j</artifactId>
+      <version>20100207</version>
+    </dependency>
+
+    <!-- Optional: Java Native Access -->
+    <dependency>
+      <groupId>net.java.dev.jna</groupId>
+      <artifactId>platform</artifactId>
+      <version>5.5.0</version>
+    </dependency>
+
+    <!-- Optional: For Jenkins plugin testing -->
+    <dependency>
+      <groupId>org.jenkins-ci.main</groupId>
+      <artifactId>jenkins-test-harness</artifactId>
+      <version>1556.v0d407b_798d89</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
+
+  <!-- ✅ Repositories (required for parent + dependencies) -->
+  <repositories>
+    <repository>
+      <id>jenkins-releases</id>
+      <url>https://repo.jenkins-ci.org/releases/</url>
+    </repository>
+    <repository>
+      <id>maven-central</id>
+      <url>https://repo.maven.apache.org/maven2</url>
+    </repository>
+  </repositories>
 
 </project>
