--- a/pom.xml
+++ b/pom.xml
@@ -48,5 +48,13 @@
       <scope>provided</scope>
     </dependency>
   </dependencies>
+         
+         <dependency>
+  <groupId>org.mindrot</groupId>
+  <artifactId>jbcrypt</artifactId>
+  <version>0.4</version>
+  <scope>provided</scope>
+</dependency>
+
 
 </project>
